# OlivaDiceCore

./: .flake8  .gitignore  .ruff.toml  OlivOSPlaginManager.json  README.md  pyproject.toml
.github/workflows/: main.yml  releaseWithOlivOS.yml
OlivaDiceCore/: OlivaDiceCore.opk  __init__.py  app.json  censorAPI.py  censorDFA.py  console.py  crossHook.py  data.py  drawCard.py  drawCardData.py  helpDoc.py  helpDocData.py  main.py  msgCustom.py  msgCustomManager.py  msgEvent.py  msgReply.py  msgReplyModel.py  onedice.py  onediceOverride.py  ordinaryInviteManager.py  pcCard.py  pcCardData.py  pulse.py  skillCheck.py  userConfig.py  webTool.py
